# goit-pythonweb-hw-012

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.MD  docker-compose.yaml  pyproject.toml
app/: schemas.py
app/api/: authentication.py  contacts.py  users.py
app/conf/: config.py
app/database/: cache.py  db.py
app/repository/: contacts.py  models.py  users.py
app/services/: auth.py  cache.py  contacts.py  email.py  hash.py  upload_file.py  users.py
app/templates/: reset_password_email.html  reset_password_page.html
docs/source/: conf.py  index.rst
migrations/versions/: 69d775c5ee0c_add_user_role.py
tests/: pytest.ini
tests/repository/: test_contacts.py  test_integration_contacts.py  test_integration_users.py
