[tool.poetry]
name = "goit-pythonweb-hw-12"
version = "0.3.0"
description = ""
authors = ["Sergii <kryvkosergii@gmail.com>"]
readme = "README.md"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.7"}
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
cloudinary = "^1.42.1"
pydantic-settings = "^2.7.1"
passlib = {extras = ["bcrypt"], version = "==1.7.4"}
bcrypt = "==3.2.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-mail = "^1.4.2"
slowapi = "^0.1.9"
redis = "^5.2.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
aiosqlite = "^0.21.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
